--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "daisyui": "^5.0.38",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router": "^7.6.1",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
@@ -22,6 +23,7 @@
     "@types/axios": "^0.9.36",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-router": "^5.1.20",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
